force-app/main/default/objects/Contact/fields/Book_Count__c.field-meta.xml
<CustomField>
    <fullName>Book_Count__c</fullName>
    <label>Book Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>