force-app/main/default/objects/Contact/fields/Current_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Current_Recommendation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Recommendation</label>
    <referenceTo>Book__c</referenceTo>
    <relationshipLabel>Contact Recommendations</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>