force-app/main/default/objects/Contact/fields/Favorite_Genre__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Genre__c</fullName>
    <label>Favorite Genre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Action and Adventure</fullName>
            </value>
            <value>
                <fullName>Biographies and Autobiographies</fullName>
            </value>
            <value>
                <fullName>Classics</fullName>
            </value>
            <value>
                <fullName>Comic Book or Graphic Novel</fullName>
            </value>
            <value>
                <fullName>Cookbooks</fullName>
            </value>
            <value>
                <fullName>Detective and Mystery</fullName>
            </value>
            <value>
                <fullName>Drama</fullName>
            </value>
            <value>
                <fullName>Fantasy</fullName>
            </value>
            <value>
                <fullName>Historical Fiction</fullName>
            </value>
            <value>
                <fullName>History</fullName>
            </value>
            <value>
                <fullName>Horror</fullName>
            </value>
            <value>
                <fullName>Literary Fiction</fullName>
            </value>
            <value>
                <fullName>Nonfiction</fullName>
            </value>
            <value>
                <fullName>Poetry</fullName>
            </value>
            <value>
                <fullName>Romance</fullName>
            </value>
            <value>
                <fullName>Science Fiction</fullName>
            </value>
            <value>
                <fullName>Self-Help</fullName>
            </value>
            <value>
                <fullName>Short Stories</fullName>
            </value>
            <value>
                <fullName>Suspense and Thrillers</fullName>
            </value>
            <value>
                <fullName>True Crime</fullName>
            </value>
            <value>
                <fullName>Young Adult</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>