force-app/main/default/objects/Contact/fields/Last_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Last_Outreach__c</fullName>
    <label>Last Outreach</label>
    <type>DateTime</type>
</CustomField>