force-app/main/default/objects/Contact/fields/Loyalty_Status__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Status__c</fullName>
    <formula>IF(Loyalty_Points__c&lt;2000, NULL, IF(Loyalty_Points__c&lt;4999, &apos;Bronze&apos;, IF(Loyalty_Points__c&lt;9999, &apos;Silver&apos;, &apos;Gold&apos; ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loyalty Status</label>
    <type>Text</type>
</CustomField>