force-app/main/default/objects/Contact/fields/Version_1_Check_Box_Update__c.field-meta.xml
<CustomField>
    <fullName>Version_1_Check_Box_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Version 1 Check Box Update</label>
    <type>Checkbox</type>
</CustomField>