force-app/main/default/objects/Contact/fields/VIP_Discount__c.field-meta.xml
<CustomField>
    <fullName>VIP_Discount__c</fullName>
    <label>VIP Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>