force-app/main/default/objects/Contact/fields/Why_should_you_read_this_book__c.field-meta.xml
<CustomField>
    <fullName>Why_should_you_read_this_book__c</fullName>
    <formula>Current_Recommendation__r.Recommendation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Why should you read this book?</label>
    <type>Text</type>
</CustomField>