force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Loyalty_Points__c</columns>
    <columns>Loyalty_Status__c</columns>
    <columns>Favorite_Genre__c</columns>
    <columns>Current_Recommendation__c</columns>
    <columns>Last_Outreach__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
</ListView>